[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Character2D.gd" type="Script" id=1]
[ext_resource path="res://Textures/Characters.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/AnimationDEAD.tres" type="Animation" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="Character2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/AnimationDEAD = ExtResource( 3 )

[node name="Flipeable" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Flipeable"]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 145, 49, 22, 22 )

[node name="GunPosition" type="Position2D" parent="Flipeable"]
position = Vector2( 7, -9 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.5 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.6, 0.8 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
